# RIFImporter

./: CMakeLists.txt  packages.cmake
src/: CMakeLists.txt  Cargo.toml  RIFImporter_CHelperlib.c
src/include/: RIFImporter.h  RIFImporterDebug.h  RIFImporterTermGenerator.h
src/src/: entailment_map.rs  error.rs  export_functions.rs  extern_c_structs.rs  formula_call_rdf_hook.rs  genterms.rs  lib.rs  rdfhelper.rs  rifidata.rs  rififormulas.rs  rifigraph.rs  shared.rs  vocab.rs
src/src/interpreter/: d.rs  mod.rs  owldirect.rs  owlrdfbased.rs  rdf.rs  rdfs.rs  rif.rs  simple.rs
test/: CMakeLists.txt  check_query.c  configure_roundtrip.cmake  printhelper.h  reimport_data.c  test_formula_generation.c  testdriver.c  testdriver_export_rdf.c  testdriver_roundtrip.c  tools.cmake
test/data/: data01-premise.ttl  data02-premise.ttl  data03-query.ttl  data04-premise.ttl  data04-query.ttl  data05-premise.ttl  data06-query.ttl  data07-premise.ttl  data08-premise.ttl  data10-premise.ttl  data12-query.ttl  data13-query.ttl  data15-premise.ttl  data15-query.ttl  data20-premise.ttl  data20-query.ttl  data24-premise.ttl  data24-query.ttl  data28-premise.ttl  data28-query.ttl  data29-premise.ttl  data29-query.ttl  data30-premise.ttl  data30-query.ttl  data31-premise.ttl  data31-query.ttl  data33-premise.ttl  data33-query.ttl  data34-premise.ttl  data34-query.ttl  data35-premise.ttl  data35-query.ttl  manifest.json
test/data_export/: data04.ttl  data08.ttl  data09.ttl
